# koreader

./: .gitignore  .gitmodules  Makefile  flake.nix  kobobuild.bash  kodev  meson.build  meson_options.txt  reader.lua  setupkoenv.lua  shell.nix
.github/workflows/: build.yml
base/: cre.cpp  fix_libs.py  launcher.sh  libkoreader.gen_link_files.sh  libkoreader.meson.lua  wrap-mupdf.c  wrap-mupdf.h
base/ffi/: SDL2_0.lua  blitbuffer.lua  freetype.lua  harfbuzz.lua  jpeg.lua  koptcontext.lua  mupdf.lua  mupdf_h.lua  pic.lua  utf8proc.lua  util.lua  webp.lua  zipwriter.lua  zlib.lua  zstd.lua
base/ffi-cdecl/: blitbuffer_cdecl.c  mupdf_decl.c  wrap-mupdf_cdecl.c
base/spec/unit/: font_spec.lua  koptcontext_spec.lua  mupdf_spec.lua
doc/: Building.md  Building_targets.md
frontend/: fontlist.lua  persist.lua
frontend/apps/reader/: readerui.lua
frontend/device/generic/: device.lua
frontend/device/kindle/: device.lua
frontend/document/: pdfdocument.lua
frontend/ui/: otamanager.lua  uimanager.lua
frontend/ui/data/: css_tweaks.lua  onetime_migration.lua
frontend/ui/message/: filemessagequeue.lua  messagequeue.lua  streammessagequeue.lua
make/: android.mk  ci.mk  emulator.mk  emulator_linux.mk  emulator_macos.mk  emulator_tests.mk  kindle.mk  kobo.mk  remarkable.mk
meson/: .gitignore  cross_android-arm.ini  cross_android-arm64.ini  cross_android-x86_64.ini  cross_emulator-macos-arm64.ini  cross_kindlepw2.ini  cross_kobo.ini  cross_remarkable.ini  options.ini  options_debug.ini  options_install_symlinks.ini  options_release.ini  target_android.ini  target_emulator-linux.ini  target_emulator-macos-x86_64.ini  target_emulator-macos.ini  target_emulator.ini  target_kindlepw2.ini  target_kobo.ini  target_remarkable.ini
meson/tools/: rockspec2meson  subproject-patches
platform/android/: llapp_main.lua
platform/kobo/: koreader.sh
platform/mac/: do_mac_bundle.sh
spec/unit/: commonrequire.lua  document_spec.lua  filemanager_spec.lua  persist_spec.lua
subprojects/: .gitignore  7z.wrap  cpr.wrap  curl.wrap  czmq.wrap  djvulibre.wrap  dropbear.wrap  fbink.wrap  ffi-cdecl.wrap  freetype2.wrap  fribidi.wrap  gcc-lua-cdecl.wrap  gcc-lua.wrap  giflib.wrap  glib.wrap  gvdb.wrap  harfbuzz.wrap  k2pdfopt.wrap  koreader-lfs.wrap  leptonica.wrap  libaes.wrap  libffi.wrap  libjpeg-turbo.wrap  libk2pdfopt.wrap  libpng.wrap  libunibreak.wrap  libwebp.wrap  libzmq.wrap  lj-wpaclient.wrap  lodepng.wrap  lua-argparse.wrap  lua-busted.wrap  lua-dkjson.wrap  lua-htmlparser.wrap  lua-lpeg.wrap  lua-penlight.wrap  lua-rapidjson.wrap  lua-say.wrap  lua-spore.wrap  lua-term.wrap  (+31 more)
subprojects/crengine/: meson.build  meson_options.txt
subprojects/crengine/crengine/: meson.build
subprojects/crengine/crengine/src/: lvfntman.cpp  lvtinydom.cpp
subprojects/koreader-runtests/: busted_config.lua  meson.build  runtests
subprojects/lua-ljsqlite3/: init.lua  meson.build
subprojects/packagefiles/7z/: visibility.patch  zstd-support.patch
subprojects/packagefiles/7z/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/cpr/overlay/: meson.build
subprojects/packagefiles/cpr/overlay/cpr/: meson.build
subprojects/packagefiles/curl/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/curl/overlay/lib/: curl_config.meson.h  meson.build
subprojects/packagefiles/curl/overlay/src/: meson.build
subprojects/packagefiles/curl/overlay/tests/: meson.build
subprojects/packagefiles/curl/overlay/tests/libtest/: meson.build
subprojects/packagefiles/curl/overlay/tests/server/: meson.build
subprojects/packagefiles/curl/overlay/tests/unit/: meson.build
subprojects/packagefiles/czmq/: android.patch  default-source-define.patch  visibility.patch  zbeacon.patch
subprojects/packagefiles/czmq/overlay/: meson.build
subprojects/packagefiles/djvulibre/: android.patch  no-locale-mangling.patch
subprojects/packagefiles/djvulibre/overlay/: config.h.meson  meson.build  meson_options.txt
subprojects/packagefiles/dropbear/: dbscp-path.patch  nochdir-hack.patch  options-hack.patch  pubkey-hack.patch
subprojects/packagefiles/dropbear/overlay/: localoptions.meson.h  meson.build  meson_options.txt
subprojects/packagefiles/fbink/: use-system-libunibreak.patch
subprojects/packagefiles/fbink/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/ffi-cdecl/overlay/: ffi-cdecl.meson.sh  meson.build
subprojects/packagefiles/freetype2/: fix-install-tags.patch
subprojects/packagefiles/fribidi/: fix-install-tags.patch  no-unnecessary-lto.patch
subprojects/packagefiles/gcc-lua-cdecl/: gcc-lua-cdecl-do-not-mangle-c99-types.patch
subprojects/packagefiles/gcc-lua-cdecl/overlay/: meson.build
subprojects/packagefiles/gcc-lua/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/giflib/overlay/: meson.build
subprojects/packagefiles/k2pdfopt/overlay/: koptocr.c  koptocr.h  meson.build  tesseract.h  willus_config.meson.h
subprojects/packagefiles/koreader-lfs/overlay/: meson.build
subprojects/packagefiles/leptonica/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/leptonica/overlay/src/: meson.build
subprojects/packagefiles/libaes/overlay/: meson.build
subprojects/packagefiles/libunibreak/overlay/: meson.build
subprojects/packagefiles/libunibreak/overlay/src/: meson.build
subprojects/packagefiles/libwebp/overlay/: meson.build
subprojects/packagefiles/libwebp/overlay/sharpyuv/: meson.build
subprojects/packagefiles/libwebp/overlay/src/: meson.build
subprojects/packagefiles/libwebp/overlay/src/dec/: meson.build
subprojects/packagefiles/libwebp/overlay/src/demux/: meson.build
subprojects/packagefiles/libwebp/overlay/src/dsp/: meson.build
subprojects/packagefiles/libwebp/overlay/src/enc/: meson.build
subprojects/packagefiles/libwebp/overlay/src/utils/: meson.build
subprojects/packagefiles/libzmq/overlay/: meson.build  meson_options.txt
subprojects/packagefiles/lj-wpaclient/overlay/: meson.build
subprojects/packagefiles/lodepng/overlay/: meson.build
tools/: graph_memory.sh
(+131 files in other folders)
