crengine_includes = include_directories('include')

crengine_sources = files(
  'qimagescale/qimagescale.cpp',
  'src/chmfmt.cpp',
  'src/cp_stats.cpp',
  'src/crconcurrent.cpp',
  'src/cri18n.cpp',
  'src/crskin.cpp',
  'src/crtest.cpp',
  'src/crtxtenc.cpp',
  'src/docxfmt.cpp',
  'src/epubfmt.cpp',
  'src/fb3fmt.cpp',
  'src/hist.cpp',
  'src/hyphman.cpp',
  'src/lstridmap.cpp',
  'src/lvbmpbuf.cpp',
  'src/lvdocview.cpp',
  'src/lvdrawbuf.cpp',
  'src/lvfnt.cpp',
  'src/lvfntman.cpp',
  'src/lvimg.cpp',
  'src/lvmemman.cpp',
  'src/lvopc.cpp',
  'src/lvpagesplitter.cpp',
  'src/lvrend.cpp',
  'src/lvstream.cpp',
  'src/lvstring.cpp',
  'src/lvstsheet.cpp',
  'src/lvstyles.cpp',
  'src/lvtextfm.cpp',
  'src/lvtinydom.cpp',
  'src/lvxml.cpp',
  'src/mathml.cpp',
  'src/odtfmt.cpp',
  'src/odxutil.cpp',
  'src/pdbfmt.cpp',
  'src/props.cpp',
  'src/rtfimp.cpp',
  'src/textlang.cpp',
  'src/txtselector.cpp',
  'src/wolutil.cpp',
  'src/wordfmt.cpp',
)
